[package]
name = "eolymp"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
rand = "0.10.0-rc.0"
open = "5.3.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
scraper = "0.24.0"
diesel = { version = "2.3.2", features = ["sqlite", "chrono"] }
chrono = "0.4.42"